add of dropdown

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/header.css">
     <link rel="stylesheet" href="css/section_body.css">
+    <link rel="stylesheet" href="css/footer.css">
+    <link rel="stylesheet" href="css/icon7.css">
     <title>world vector logo</title>
 </head>
 <body>
@@ -18,17 +20,17 @@
             </div>
             <div class="top-navigation-menu">
                 <ul>
-                    <li><a href="#">ALPHABETICAL</a></li>
-                    <li><a href="#">MOST DOWNLOADED</a></li>
-                    <li><a href="#"><i class="fab fa-facebook-square"></i></a></li>
-                    <li>
+                    <li class="list-itm"><a class="list-itm-link" href="#">ALPHABETICAL</a></li>
+                    <li class="list-itm"><a class="list-itm-link" href="#">MOST DOWNLOADED</a></li>
+                    <li class="list-itm"><a class="list-itm-link" href="#"><i class="fab fa-facebook-square"></i></a></li>
+                    <li class="list-itm">
                         <button class="top-navigation-add-boutton button">
-                            <a href="#"> <i class="fas fa-plus"></i> ADD  LOGO</a>
+                            <a class="list-itm-link" href="#"> <i class="fas fa-plus"></i> ADD  LOGO</a>
                         </button>
                     </li>
-                    <li>
+                    <li class="list-itm">
                         <button class="top-navigation-user">
-                            <a href="#"><i class="far fa-user"></i></a>
+                            <a class="list-itm-link" href="#"><i class="far fa-user"></i></a>
                         </button>
                     </li>
                 </ul>
@@ -180,13 +182,61 @@
                 
             </div>
         </article>
-        <article class="more">
+        <article class="flex-center">
             <button class="more-boutton button">MORE LATEST DOWNLOADS</button>
         </article>
     </section>
 
-    <footer>
-
+    <footer class="flex">
+        <div class="footer-menu">
+            <ul>
+                <li class="list-itm">
+                    <a class="list-itm-link" href="#"> create account</a>
+                </li>
+                <li class="list-itm">
+                    <a class="list-itm-link" href="#"> terms of use</a>
+                </li class="list-itm">
+                <li class="list-itm dropdown">
+                    <button class="button dropdown-btn">
+                        <a class="list-itm-link" href="#"> our tools <i class="fas fa-caret-down"></i></a>
+                    </button>
+                    <div class="dropup-content">
+                        <a class="" href="#">Lorem Lorem</a>
+                        <a class="" href="#">Coinranking</a>
+                        <a class="" href="#">Coinholder</a>
+                    </div>
+                </li>
+            </ul>
+        </div>
+        <div class="footer-options">
+            <ul>
+                <li class="list-itm">
+                    <button class="button">
+                        <a class="list-itm-link" href="#"> <i class="fas fa-plus"></i> Add Logo</a>
+                    </button>
+                </li>
+                <li class="list-itm dropdown">
+                    <button class="button dropdown-btn langage-botton">
+                        <i class="icon-translate-7"></i> 
+                        <a class="list-itm-link" href="#"> English <i class="fas fa-caret-down"></i></a>
+                    </button>
+                    <div class="dropup-content">
+                        <a class="" href="#">Lorem Lorem</a>
+                        <a class="" href="#">Coinranking</a>
+                        <a class="" href="#">Coinholder</a>
+                        <a class="" href="#">Lorem Lorem</a>
+                        <a class="" href="#">Coinranking</a>
+                        <a class="" href="#">Coinholder</a>
+                        <a class="" href="#">Lorem Lorem</a>
+                        <a class="" href="#">Coinranking</a>
+                        <a class="" href="#">Coinholder</a>
+                        <a class="" href="#">Lorem Lorem</a>
+                        <a class="" href="#">Coinranking</a>
+                    </div>
+                </li>
+               
+            </ul>
+        </div>
     </footer>
 
     <script src="js/all.min.js"></script>
