--- a/index.html
+++ b/index.html
@@ -196,14 +196,24 @@
                 <li class="list-itm">
                     <a class="list-itm-link" href="#"> terms of use</a>
                 </li class="list-itm">
-                <li class="list-itm dropdown">
-                    <button class="button dropdown-btn">
+                <li class="list-itm dropup">
+                    <button class="button dropdup-btn">
                         <a class="list-itm-link" href="#"> our tools <i class="fas fa-caret-down"></i></a>
                     </button>
                     <div class="dropup-content">
-                        <a class="" href="#">Lorem Lorem</a>
-                        <a class="" href="#">Coinranking</a>
-                        <a class="" href="#">Coinholder</a>
+                            <a class="" href="#">  
+                                <img src="img/logo/lorem_lorem.svg" height="20px" alt=""> 
+                                Lorem Lorem
+                            </a>
+                        
+                        <a class="" href="#">
+                            <img src="img/logo/coin.svg" height="20px" alt=""> 
+                            Coinranking
+                        </a>
+                        <a class="" href="#">
+                            <img src="img/logo/coinholder.svg" height="20px" alt=""> 
+                            Coinholder
+                        </a>
                     </div>
                 </li>
             </ul>
@@ -211,27 +221,26 @@
         <div class="footer-options">
             <ul>
                 <li class="list-itm">
-                    <button class="button">
+                    <button class="button footer-options-add-boutton">
                         <a class="list-itm-link" href="#"> <i class="fas fa-plus"></i> Add Logo</a>
                     </button>
                 </li>
-                <li class="list-itm dropdown">
-                    <button class="button dropdown-btn langage-botton">
+                <li class="list-itm dropup">
+                    <button class="button dropdup-btn langage-botton">
                         <i class="icon-translate-7"></i> 
                         <a class="list-itm-link" href="#"> English <i class="fas fa-caret-down"></i></a>
                     </button>
                     <div class="dropup-content">
-                        <a class="" href="#">Lorem Lorem</a>
-                        <a class="" href="#">Coinranking</a>
-                        <a class="" href="#">Coinholder</a>
-                        <a class="" href="#">Lorem Lorem</a>
-                        <a class="" href="#">Coinranking</a>
-                        <a class="" href="#">Coinholder</a>
-                        <a class="" href="#">Lorem Lorem</a>
-                        <a class="" href="#">Coinranking</a>
-                        <a class="" href="#">Coinholder</a>
-                        <a class="" href="#">Lorem Lorem</a>
-                        <a class="" href="#">Coinranking</a>
+                        <a class="" href="#">中文</a>
+                        <a class="" href="#">Nederlands</a>
+                        <a class="" href="#">日本語</a>
+                        <a class="" href="#">русский</a>
+                        <a class="" href="#">Português</a>
+                        <a class="" href="#">English</a>
+                        <a class="" href="#">Français</a>
+                        <a class="" href="#">Ελληνικά</a>
+                        <a class="" href="#">Español</a>
+                        <a class="" href="#">Arabic</a>
                     </div>
                 </li>
                
