add of alt in dropup images

--- a/index.html
+++ b/index.html
@@ -202,16 +202,16 @@
                     </button>
                     <div class="dropup-content">
                             <a class="" href="#">  
-                                <img src="img/logo/lorem_lorem.svg" height="20px" alt=""> 
+                                <img src="img/logo/lorem_lorem.svg" height="20px" alt="Lorem Lorem logo"> 
                                 Lorem Lorem
                             </a>
                         
                         <a class="" href="#">
-                            <img src="img/logo/coin.svg" height="20px" alt=""> 
+                            <img src="img/logo/coin.svg" height="20px" alt="Coinranking logo"> 
                             Coinranking
                         </a>
                         <a class="" href="#">
-                            <img src="img/logo/coinholder.svg" height="20px" alt=""> 
+                            <img src="img/logo/coinholder.svg" height="20px" alt="Coinholder logo"> 
                             Coinholder
                         </a>
                     </div>
